// Email proto file to connect services to Email-Service

/* 
    Command For Node Compolation
    run from /stocks-app/proto dir
    grpc_tools_node_protoc -I=. --js_out=import_style=commonjs,binary:../email-service/proto --grpc_out=../email-service/proto --plugin=protoc-gen-grpc=`which grpc_tools_node_protoc_plugin` email.proto 

    Go protoc complation command
    run from /stocks-app/proto dir
    protoc --go_out=plugins=grpc:../stocks-service/proto/email email.proto

    Python Protoc complation command
    run from /stocks-app/proto dir
    python3 -m grpc_tools.protoc -I. --python_out=../users-service/proto/ --grpc_python_out=../users-service/proto  email.proto
*/

syntax= "proto3";

service EmailService {
    rpc VerifyEmail (VerifyRequest) returns (EmailReply) {}
    rpc CheckVerified (CheckRequest) returns (EmailReply) {}
}

message EmailRequest {
    Email email = 1;
}

message EmailReply {
    string body = 1;
    int32 status = 2;
}

message VerifyRequest {
    string id = 1;
    string email = 2;
}

message CheckRequest {
    string id = 1;
}

message Email {
    repeated string toAddress = 1;
    string subject = 2;
    string html = 3;
}